--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-20.04
 
     env:
-      CR_PAT_USER: devplayer0
       DOCKER_REPO: ghcr.io/devplayer0/octolxd
+      RELEASE_NAME: OctoLXD
 
     steps:
       - name: Checkout code
@@ -19,26 +19,27 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16.5'
+      - name: Install crane
+        run: go install github.com/google/go-containerregistry/cmd/crane@v0.5.1
+
       - id: vars
         name: Generate release vars
         run: |
           echo "::set-output name=version::"$(echo "${{ github.ref }}" | sed -r 's|refs/tags/v(.+)|\1|')""
-
           echo "Changelog: " > release.md
           git log --pretty=format:" - %s" "$(git describe --tags --abbrev=0 ${{ github.event.ref }}^)"..${{ github.event.ref }} >> release.md
-
       - name: Log into GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ env.CR_PAT_USER }}
-          password: ${{ secrets.CI_PAT }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Tag Docker image
-        run: |
-          docker pull "$DOCKER_REPO:${{ github.sha }}"
-          docker tag "$DOCKER_REPO:${{ github.sha }}" "$DOCKER_REPO:${{ steps.vars.outputs.version }}"
-          docker push "$DOCKER_REPO:${{ steps.vars.outputs.version }}"
+        run: crane tag ${{ env.DOCKER_REPO }}:latest ${{ steps.vars.outputs.version }}
 
       - name: Create Release
         id: create_release
@@ -47,5 +48,5 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ steps.vars.outputs.version }}
+          release_name: ${{ env.RELEASE_NAME }} ${{ steps.vars.outputs.version }}
           body_path: release.md
